# monorepo

./: .dockerignore  .env.example  .eslintignore  .eslintrc.js  .gitignore  .gitmodules  .npmrc  .prettierignore  Dockerfile  README.md  fly.toml  lib  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  ponder-env.d.ts  ponder.config.ts  ponder.schema.ts  remappings.txt  schema.graphql  turbo.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  contracts-test.yml  daily-apr-seed.yml  deploy-preview.yml  deploy.yml  graph.yml  lint-fix.yml  next-app-preview.yml  next-app.deploy.yml  vercel-preview.yml  vercel-prod.yml
abis/: Milkman.json  Milkman.ts
apps/balancer-tools/: .env.example  .eslintignore  .gitignore  components.json  jest.config.js  jest.setup.js  next.config.js  package.json  pre-build.js  pre-build.ts  seed.ts  sentry.properties  tailwind.config.js  tsconfig.json  vercel.json  wagmi.config.ts
apps/balancer.tools/: .gitignore  .lintstagedrc.js  package.json
apps/bribes-market/: package.json  (+1 more)
apps/gyro-eclp-api/: .gitignore  .pre-commit-config.yaml  Procfile  README.md  fly.toml  pyproject.toml  run.py
apps/gyro-eclp-api/gyro_eclp_api/: __init__.py  test_api.py
apps/gyro-eclp-api/gyro_eclp_api/src/: eclp_prec_implementation.py  models.py
apps/gyro-eclp-api/tests/: test_api.py
patches/: @netlify__plugin-nextjs@4.39.3.patch  @rainbow-me__rainbowkit@0.12.2.patch  graphql-codegen-plugin-typescript-swr@0.8.5.patch  next@13.4.13.patch
src/: ComposableCow.ts  Milkman.ts  handler.ts  handlerDecoders.ts  types.ts  utils.ts
(+852 files in other folders)
